validation input update

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <form class="modal-content needs-validation" novalidate>
           <!-- <div class=""> -->
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Add new ToDo</h5>
               <button
                 type="button"
                 class="btn-close"
