add infinite scroll

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,14 @@
       data-bs-toggle="modal"
       data-bs-target="#exampleModal"
     >
-      Launch demo modal
+      Add To-Do
     </button>
+
+    <ul id="container">
+  </ul>
+
+  <div id="infiniteTrigger" ></div>
+  <div id="theEnd" style="display: none">The end</div>
 
     <!-- Modal -->
     <div
@@ -31,7 +37,6 @@
     >
       <div class="modal-dialog">
         <form class="modal-content needs-validation" novalidate>
-          <!-- <div class=""> -->
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLabel">Add new ToDo</h5>
               <button
@@ -64,7 +69,6 @@
                 Save changes
               </button>
             </div>
-          <!-- </div> -->
         </form>
       </div>
     </div>
